--- a/views/index.ejs
+++ b/views/index.ejs
@@ -101,6 +101,16 @@
           }
         });
 
+        ////
+        navigator.serviceWorker.register("sw.js");
+        Notification.requestPermission(function (result) {
+          if (result === "granted") {
+            navigator.serviceWorker.ready.then(function (registration) {
+              registration.showNotification("Notification with ServiceWorker");
+            });
+          }
+        });
+
         messaging.onTokenRefresh(function () {
           messaging
             .getToken()
