--- a/views/index.ejs
+++ b/views/index.ejs
@@ -102,7 +102,7 @@
         });
 
         ////
-        navigator.serviceWorker.register("sw.js");
+        navigator.serviceWorker.register("firebase-messaging-sw.js");
         Notification.requestPermission(function (result) {
           if (result === "granted") {
             navigator.serviceWorker.ready.then(function (registration) {
